# runciv

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md  example.config.toml  runciv.service
.github/workflows/: deploy.yml  linux.yml
frontend/: index.html  openapi.json  package.json
frontend/scripts/: gen-api.py
frontend/src/: index.css  main.tsx  routes.tsx
frontend/src/api/: api.ts  auth.ts  error.ts
frontend/src/context/: user.tsx
frontend/src/views/: login.tsx
migrations/: 0001_initial.toml  0002_friends.toml  0003_lobbies.toml  0004_added_owner_to_lobby.toml  0004_chat.toml  0004_chats.toml
src/: config.rs  main.rs  server.rs  swagger.rs
src/chan/: mod.rs  ws_manager_chan.rs
src/handler/: files.rs  is_alive.rs  mod.rs  ws.rs
src/models/: account.rs  chat.rs  friend.rs  game.rs  invite.rs  lobby.rs  mod.rs
src/server/: error.rs  mod.rs  swagger.rs
src/server/handler/: accounts.rs  auth.rs  chats.rs  friends.rs  games.rs  health.rs  invites.rs  lobbies.rs  mod.rs  version.rs  websocket.rs  welcome_page.rs
src/server/middleware/: authentication_required.rs  handle_not_found.rs  json_extractor_error.rs  mod.rs  token_required.rs
static/: index.html
