[package]
name = "runciv"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>", "CrsiX"]
license = "AGPL-3.0"
repository = "https://github.com/hopfenspace/runciv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
actix-web = { version = "~4" }
# Extensions for actix-web
actix-toolbox = { version = "~0.13", features = ["logging", "ws", "session-postgres-only"] }

# openapi swagger
utoipa = { version = "~5", features = ["actix_extras", "repr", "chrono", "uuid", "openapi_extensions", "preserve_order"] }
# openapi swagger boilerplat generation
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }

# Hashing
argon2 = { version = "~0.5" }
# RNG utils
rand = { version = "~0.8" }

# Logging facade
log = { version = "~0.4" }

# Cli parser
clap = { version = "~4", features = ["derive"] }

# Serialization
serde = { version = "~1", features = ["derive"] }
serde_repr = { version = "~0.1" }
serde_json = { version = "~1", features = ["raw_value"] }
toml = { version = "~0.8" }
# Time library
chrono = { version = ">=0.4.20", default-features = false, features = ["serde"] }
# Bytes abstractions for network usage
bytes = { version = "~1" }
# Wrapper for string with bytes as storage
bytestring = { version = "~1" }
# UUID generation
uuid = { version = "~1", features = ["v4", "serde"] }
# Base64 encoding and decoding library
base64 = { version = "~0.22" }

# ORM
rorm = { version = "~0.6", default-features = false, features = ["postgres-only", "time", "chrono", "cli", "uuid"] }

# Async runtime
tokio = { version = ">=1.23.1", features = ["rt-multi-thread", "sync", "macros", "fs"] }
# Async abstractions
futures = { version = "~0.3" }
futures-util = "0.3"

# More iterators
itertools = { version = "~0.13" }

# Lazy initialization
once_cell = { version = "~1" }

[features]
rorm-main = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
